<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.login.LoginActivity">


    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWindowBackground">

            <View
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/colorPrimary" />

            <ImageView
                    android:id="@+id/ivLogoBlukendi"
                    android:layout_width="150dp"
                    android:layout_height="@dimen/core_dimen_size_38dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/core_dimen_size_24dp"
                    android:contentDescription="@string/app_name"
                    android:tint="@color/colorWhite" />

            <androidx.cardview.widget.CardView
                    android:id="@+id/cardRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivLogoBlukendi"
                    android:layout_margin="@dimen/core_dimen_size_32dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="@dimen/core_dimen_size_8dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/core_dimen_size_24dp">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/core_dimen_size_18dp"
                            android:text="@string/label_login_greeting_1"
                            android:textColor="@color/colorDarkBright"
                            android:textSize="@dimen/core_font_size_16sp" />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_login_greeting_2"
                            android:textColor="@color/colorDarkBright"
                            android:textSize="@dimen/core_font_size_12sp" />

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/core_dimen_size_36dp" />

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tlUserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintTextAppearance="@style/TextHintInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/inputUserName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_login_username"
                                android:imeOptions="actionNext"
                                android:inputType="text"
                                android:textSize="@dimen/core_font_size_14sp" />

                        <requestFocus />

                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/core_dimen_size_8dp" />

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tlUserPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintTextAppearance="@style/TextHintInputLayout"
                            app:passwordToggleDrawable="@drawable/password_toggle_drawable"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="@color/colorTransparent"
                            app:passwordToggleTintMode="screen">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/inputPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_login_password"
                                android:imeOptions="actionDone"
                                android:inputType="text"
                                android:lines="1"
                                android:textSize="@dimen/core_font_size_14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                            android:id="@+id/tvLoginError"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginBottom="@dimen/core_dimen_size_8dp"
                            android:letterSpacing="0.01"
                            android:textColor="@color/colorRedCC"
                            android:textSize="@dimen/core_font_size_10sp" />

                    <Button
                            android:id="@+id/btnLogin"
                            style="@style/CommonButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/core_dimen_size_12dp"
                            android:layout_marginBottom="@dimen/core_dimen_size_24dp"
                            android:text="@string/button_login_enter" />

                    <ProgressBar
                            android:id="@+id/progressBar"
                            style="@style/Widget.AppCompat.ProgressBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="50dp"
                            android:layout_marginBottom="@dimen/core_dimen_size_24dp"
                            android:indeterminate="true"
                            android:indeterminateOnly="true"
                            android:visibility="gone"
                            tools:targetApi="LOLLIPOP" />

                    <TextView
                            android:id="@+id/tvForgetPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:letterSpacing="0.01"
                            android:text="@string/text_forget_password"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/core_font_size_12sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cardRegister"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/core_dimen_size_24dp"
                    android:text="@string/label_no_account"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/core_font_size_12sp" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>
